change buildspec to '**/*'

--- a/ci/buildspec.yml
+++ b/ci/buildspec.yml
@@ -4,6 +4,6 @@ phases:
     commands:
       - pip install jinja2 markupsafe
 artifacts:
-  type: zip
   files:
-    - **/*
+    - "**/*"
+  #type: zip
